--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
 
-    <string name="loadding">正在加载中....</string>
+    <string name="loadding">正在加载中…</string>
+    <string name="loadding_more">正在加载更多…</string>
+    <string name="load_more_fail">加载失败…</string>
     <string name="timeout">请求超时，请稍后再试</string>
-    <string name="noData">暂无数据</string>
+    <string name="no_data">暂无数据</string>
     <string name="retry">重试</string>
     <string name="no_net">网络无链接，请检查</string>
     <string name="add">添加</string>
@@ -24,4 +26,5 @@
     <string name="has_new_version">有新版本</string>
     <string name="sure_update">确定更新</string>
     <string name="not_update">暂不更新</string>
+
 </resources>
