--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <string name="has_new_version">有新版本</string>
     <string name="sure_update">确定更新</string>
     <string name="not_update">暂不更新</string>
+    <string name="zero">0</string>
+    <string name="hundred">100</string>
 
 </resources>
