1.图片预览时新增共享元素动画，视觉效果更好 2.去除无用代码

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="not_update">暂不更新</string>
     <string name="zero">0</string>
     <string name="hundred">100</string>
+    <string name="img_transition">img_transition</string>
 
 </resources>
