1.完善BaseFragment基类代码，新增BaseMvvmFragment 2.新增fragment示例 3.升级部分sdk版本

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="menu_tools">工具</string>
     <string name="menu_share">分享</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
