--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,19 @@
 <resources>
     <string name="app_name">kotlinCommon</string>
-    <string name="start_count">开始计数</string>
+
+<!--    <string name="zero">0</string>-->
+<!--    <string name="hundred">100</string>-->
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Kotlin Common</string>
     <string name="nav_header_subtitle">www.yzq.name</string>
     <string name="nav_header_desc">yzq</string>
-
+    <string name="start_count">开始计数</string>
     <string name="menu_map">地图</string>
     <string name="menu_gallery">相册</string>
     <string name="menu_slideshow">幻灯片</string>
     <string name="menu_tools">工具</string>
     <string name="menu_share">分享</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
