--- a/lib_resource/src/main/res/values/strings.xml
+++ b/lib_resource/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="has_new_version">有新版本</string>
     <string name="sure_update">确定更新</string>
     <string name="not_update">暂不更新</string>
+    <string name="loadding">加载中…</string>
     <string name="zero">0</string>
     <string name="hundred">100</string>
     <string name="img_transition">img_transition</string>
