--- a/lib_resource/src/main/res/values/strings.xml
+++ b/lib_resource/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="loadding">加载中…</string>
     <string name="zero">0</string>
     <string name="hundred">100</string>
+    <string name="download">下载</string>
 </resources>
