--- a/lib_resource/src/main/res/values/strings.xml
+++ b/lib_resource/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">lib_resource</string>
     <string name="loadding_more">正在加载更多…</string>
     <string name="load_more_fail">加载失败…</string>
+    <string name="load_more_complete">加载完成</string>
+    <string name="load_more_end">我是有底线的…</string>
     <string name="timeout">请求超时，请稍后再试</string>
     <string name="no_data">暂无数据</string>
     <string name="retry">重试</string>
