新增Activity基类，适配Viewbinding和DataBinding 将现有代码适配ViewBinding和DataBinding

--- a/lib_resource/src/main/res/values-en/strings.xml
+++ b/lib_resource/src/main/res/values-en/strings.xml
@@ -42,6 +42,8 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="title">Title</string>
+    <string name="camera">camera</string>
+    <string name="gallery">gallery</string>
 
 
     <!--App-->
