--- a/lib_resource/src/main/res/values/strings.xml
+++ b/lib_resource/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="nav_header_subtitle">www.yzq.name</string>
     <string name="nav_header_desc">yzq</string>
     <string name="select_year">选择年份</string>
+    <string name="click">click</string>
 
 
 </resources>
