--- a/lib_resource/src/main/res/values-en/strings.xml
+++ b/lib_resource/src/main/res/values-en/strings.xml
@@ -52,9 +52,9 @@
     <string name="nav_header_title">Kotlin Common</string>
     <string name="nav_header_subtitle">www.yzq.name</string>
     <string name="nav_header_desc">yzq</string>
-    <string name="select_year">选择年份</string>
+    <string name="select_year">Select Year</string>
     <string name="click">click</string>
-    <string name="generate_diff_file">生成差分包</string>
-    <string name="combine_diff_file">合并差分包</string>
+    <string name="generate_diff_file">Diff File</string>
+    <string name="combine_diff_file">Patch File</string>
 
 </resources>
