feat 新增Activity中ViewBinding属性委托的实现方式以及使用示例

--- a/lib_resource/src/main/res/values-en/strings.xml
+++ b/lib_resource/src/main/res/values-en/strings.xml
@@ -56,5 +56,6 @@
     <string name="click">click</string>
     <string name="generate_diff_file">Diff File</string>
     <string name="combine_diff_file">Patch File</string>
+    <string name="test">Test</string>
 
 </resources>
