--- a/recycleview-adapter/src/main/res/values-zh/strings.xml
+++ b/recycleview-adapter/src/main/res/values-zh/strings.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">KotlinCommon</string>
     <string name="loading">加载中…</string>
-
     <string name="loading_more">正在加载更多…</string>
     <string name="load_more_complete">加载完成</string>
     <string name="load_more_end">我是有底线的…</string>
     <string name="load_more_fail">加载失败…</string>
-
 
 </resources>
