--- a/materialdialog/src/main/res/values-zh/strings.xml
+++ b/materialdialog/src/main/res/values-zh/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">materialdialog</string>
     <string name="select_year">选择年份</string>
