--- a/gao-de-map/src/main/res/values-zh/strings.xml
+++ b/gao-de-map/src/main/res/values-zh/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">高德</string>
     <string name="start_location">开始定位</string>
+
 </resources>
