--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,5 +57,6 @@
     <string name="combine_diff_file">Patch File</string>
     <string name="test">Test</string>
     <string name="start_location">Start Location</string>
+    <string name="mmkv">clear mmkv</string>
 
 </resources>
