--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -58,5 +58,6 @@
     <string name="generate_diff_file">生成差分包</string>
     <string name="combine_diff_file">合并差分包</string>
     <string name="test">测试</string>
+    <string name="mmkv">清除mmkv</string>
 
 </resources>
