feat flow基础使用示例

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -58,5 +58,6 @@
     <string name="test">Test</string>
     <string name="start_location">Start Location</string>
     <string name="clear_mmkv">clear mmkv</string>
+    <string name="collect">collect</string>
 
 </resources>
