--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="hundred">100</string>
     <string name="start_location">开始定位</string>
     <string name="clear_mmkv">清除mmkv</string>
+    <string name="collect">collect</string>
 
 
 </resources>
